# lms

./: .gitignore  CMakeLists.txt  LibrarySystem.c  LibrarySystem.cpp  LibrarySystem.h  README.md  main.cpp  vcpkg.json
controllers/: ApiController.cpp  ApiController.h
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/components/: Back.vue  Borrow.vue  Home_reader.vue  Login.vue
frontend/src/router/: index.js
frontend/src/views/: Back.vue  Backup.vue  BookManage.vue  Borrow.vue  FeedbackManage.vue  FeedbackSubmit.vue  Fine.vue  HomeAdmin.vue  HomeReader.vue  Login.vue  Profile.vue  UserManage.vue
